--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "WaniKani Review Notifier",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"options_page": "options.html",
 
 	"description": "Creates an icon when a review is ready on WaniKani",
@@ -17,7 +17,7 @@
 		"default_title": "Open WaniKani Review Session"
 	},
 
-	"author": "Keavon Chambers",
+	"author": "Keavon",
 	"background": {
 		"scripts": ["jquery-2.1.3.min.js", "wanikani.js"]
 	},
