--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
-	"name": "WaniKani Review Notifier v2",
-	"version": "2.0.0",
+	"name": "WaniKani Review Notifier",
+	"version": "1.1.0",
 	"options_page": "options.html",
 	"description": "Displays a colored icon when reviews and lessons are ready on WaniKani",
 	"icons": {
